--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,28 @@ body {
   filter: blur(20px);
   opacity: 1; /* animation: animate 8s linear infinite; */
 }
+
+.lis-text {
+  color: #fff;
+}
+.deleteBtn {
+  color: black;
+  margin: 7px 16px;
+  box-sizing: border-box;
+  background: rgb(234, 29, 70);
+  border-radius: 7px;
+  border: rgb(239, 34, 75);
+  padding: 5px 5px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.deleteBtn:hover {
+  background: rgb(255, 48, 90);
+}
+.addButton{
+  background: rgb(30, 178, 30);
+  border:  rgb(30, 178, 30);
+  border-radius: 1px 5px 5px 1px;
+  padding: 3px 8px;
+  margin: 5px -5px;
+}
